# git_server

./: .gitignore  README.md  metadata.json  package.json  pyproject.toml  run.py
.github/workflows/: publish.yml  python-app.yml  test.yml
src/git_smart_http/: __init__.py  __main__.py  cli.py  server.py
tests/: test_ipv6.py  test_logging.py  test_server.py
