[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-smart-http"
dynamic = ["version"]
description = "A pure Python implementation of a Git Smart HTTP server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Fr. Br. George", email = "frbrgeorge@gmail.com"},
    {name = "AI Studio Build"}
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
git-smart-http = "git_smart_http.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "git_smart_http.__version__"}
